fix(cepik): parse real registry payloads, surface szkoda istotna in UI
The FOUND branch had never run against a real vehicle, and every field name
in HistoriaPojazduParser was invented: zdarzenia, szkodyIstotne, przebieg,
liczbaWlascicieli, BADANIE_TECHNICZNE. None exists. The registry returns
technicalData.basicData and timelineData.events[] with eventDate/eventType/
eventName/eventDetails. The parse therefore produced damageRecords: [], which
the UI rendered as "Brak zgłoszonych szkód istotnych w CEPiK" — a clean
history for a car carrying a registered szkoda istotna. The tests passed
because their fixtures were hand-written to match the invented names.

Backend:
- rewrite the parser against payloads captured live (VIN pseudonymised;
  fixtures in src/test/resources/cepik/ are otherwise verbatim)
- DamageRecord gains insurer + categories; categories are what separate
  structural from cosmetic damage
- new VehicleEvent/EventDetail so an unmodelled event type still reaches the
  user instead of being dropped
- CepikResult gains registry identity, OC/inspection/registration status,
  vehicleLost, odometerRolledBack, province and the whole timeline; the new
  withoutData factory makes the null-not-empty rule structural
- dated mileage now comes from inspection events (odometerReadings are undated)
- discover the nforms API version from the bootstrap HTML; the pinned 1.0.17
  had rotted to 1.1.0
- MockCepikService returned empty lists on LOOKUP_FAILED — the same lie

Frontend:
- damageRecords null / [] / non-empty are three distinct states; null renders
  as "brak danych to nie to samo co brak szkód", never as a clean history
- szkoda istotna renders as a red alert above the card with insurer and
  categories, not a grey table row
- vehicleLost and odometerRolledBack get their own alerts
- cross-check registry make/model/year and mileage against the listing
- collapsible full timeline; MISSING_INPUTS and LOOKUP_FAILED copy now state
  that no verification is not a cle